# pytest-mypy-runner

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pull_request.yml  release.yml
pytest_mypy_runner/: __init__.py  mypy_test_runner.py
tests/: test_mypy.py
