[tool.poetry]
name = "pytest-mypy-runner"
version = "0.1.0"
description = "Run the mypy static type checker as a pytest test case"
authors = ["BrandonLWhite <brandonlwhite@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=7.4"
mypy = ">=1.8"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pipx-install]
poetry = "==1.8.2"
poethepoet = "==0.25.0"

[tool.poe.tasks]
test = "pytest --cov=pytest_mypy_runner --cov-report term --cov-report html --cov-report xml"